<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <FrameLayout
        android:id="@+id/layout_playground"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true">

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/button_clear_elements"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|start"
            android:layout_marginStart="30dp"
            android:layout_marginBottom="30dp"
            android:contentDescription="@string/game_playground_fab_clear"
            app:backgroundTint="?attr/colorSecondary"
            app:borderWidth="0dp"
            app:fabSize="auto"
            app:icon="@drawable/ic_broom"
            app:iconTint="?attr/colorOnSecondary"
            app:srcCompat="@drawable/ic_broom"/>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/button_open_element_list"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_marginEnd="@dimen/distance_to_border"
            android:layout_marginBottom="@dimen/distance_to_border"
            android:clickable="true"
            android:focusable="true"
            android:contentDescription="@string/game_playground_fab_add_element"
            app:backgroundTint="?attr/colorPrimary"
            app:fabSize="auto"
            app:icon="@drawable/ic_plus"
            app:srcCompat="@drawable/ic_plus" />

    </FrameLayout>
</layout>