<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable
            name="viewModel"
            type="de.thm.mixit.ui.viewmodel.GameViewModel" />
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="?attr/colorPrimaryContainer">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/textview_time_since_start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:textColor="?attr/colorOnPrimaryContainer"
            android:textSize="@dimen/text_size_medium"
            android:textStyle="bold"
            app:drawableRightCompat="@drawable/ic_hourglass"
            app:drawableTint="?attr/colorOnPrimaryContainer"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:timestampText="@{viewModel.passedTime}" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/textview_turns"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="8dp"
            android:textColor="?attr/colorOnPrimaryContainer"
            android:textSize="@dimen/text_size_medium"
            android:textStyle="bold"
            app:drawableRightCompat="@drawable/ic_barefoot"
            app:drawableTint="?attr/colorOnPrimaryContainer"
            app:intToText="@{viewModel.turns}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textview_time_since_start" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/textview_target_element"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@{viewModel.targetElement[0]}"
            android:textAlignment="center"
            android:textColor="?attr/colorOnPrimaryContainer"
            android:textSize="@dimen/text_size_large"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>