<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorSurface"
    app:layout_maxWidth="100dp">

    <ImageView
        android:id="@+id/imageView_main_menu_icon"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:adjustViewBounds="true"
        android:scaleType="fitCenter"
        android:src="@drawable/ic_mix_it"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.33"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.25" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_main_menu_endless"
        style="@style/Widget.Material3.Button.IconButton.Filled"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:onClick="onEndlessGameButtonClicked"
        android:text="@string/main_menu_button_endless"
        android:textSize="@dimen/text_size_medium"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView_main_menu_icon"
        app:layout_constraintVertical_bias="0.25"
        app:layout_constraintWidth_max="350dp"
        app:layout_constraintWidth_percent="0.8" />

    <LinearLayout
        android:id="@+id/linearlayout_arcade_buttons"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button_main_menu_endless"
        app:layout_constraintWidth_max="350dp"
        app:layout_constraintWidth_percent="0.8">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_main_menu_arcade"
            style="@style/Widget.Material3.Button.IconButton.Filled"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:onClick="onArcadeButtonClicked"
            android:text="@string/main_menu_button_arcade"
            android:textSize="@dimen/text_size_medium"
            app:layout_constraintWidth_percent="0.8" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_main_menu_delete_arcade_savestate"
            style="@style/Widget.Material3.Button.Icon"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:contentDescription="@string/ui_desc_trash_can_button"
            android:onClick="onArcadeDeleteSaveStateButtonClicked"
            app:icon="@drawable/ic_trash"
            app:iconGravity="start|end"
            app:iconTint="?attr/colorOnPrimary" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearlayout_achievements_settings_buttons"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/linearlayout_arcade_buttons"
        app:layout_constraintWidth_max="350dp"
        app:layout_constraintWidth_percent="0.8">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_main_menu_achievements"
            style="@style/Widget.Material3.Button.IconButton.Filled"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:onClick="onAchievementsButtonClicked"
            android:text="@string/main_menu_button_achievemnets"
            android:textSize="@dimen/text_size_medium" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_main_menu_settings"
            style="@style/Widget.Material3.Button.Icon"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:contentDescription="@string/ui_desc_settings_button"
            android:onClick="onSettingsButtonClicked"
            app:icon="@drawable/ic_settings"
            app:iconGravity="start|end"
            app:iconTint="?attr/colorOnPrimary" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>